# linux-task-manager

./: CMakeLists.txt
src/: main.cpp
src/core/: Process.h  ProcessReader.cpp  ProcessReader.h  SystemMonitor.cpp  SystemMonitor.h
src/filesystem/: filesystem.cpp  filesystem.h
src/gui/: MainWindow.cpp  MainWindow.h  ProcessModelTable.cpp  ProcessModelTable.h  ProcessSummaryPanel.cpp  ProcessSummaryPanel.h
src/tables/: ProcessModelTable.cpp  ProcessModelTable.h
src/utils/: StringUtils.cpp  StringUtils.h
